# ctf-arsenal

./: .gitignore  AGENTS.md  ARCH_PACKAGES.md  INSTALL_INSTRUCTIONS.sh  README.md  pyproject.toml  setup-optimized.sh  setup.sh
.agents/skills/: README.md
00_templates/: DEPRECATED.md
01_bin_exploit/: DEPRECATED.md  README.md  USAGE.md
02_ics_traffic/: DEPRECATED.md  README.md
02_ics_traffic/mitm_scripts/: arp_spoof.py
02_ics_traffic/scapy_scripts/: modbus_inject.py
03_web/: DEPRECATED.md  README.md
04_crypto/: DEPRECATED.md  README.md
05_forensics/: .gitkeep  DEPRECATED.md  README.md
05_forensics/helpers/: entropy_scan.py
05_forensics/network_forensics/: pcap_extract_http.py
06_misc/: DEPRECATED.md  README.md
cheat_sheets/: DEPRECATED.md
csc2025/: README.md
csc2025/AbyssPhantonTeam/: README.md  bruteforce.py  decrypt_flag_direct.py  solve_final2.py  solve_smart.py  try_passwords.py
csc2025/Gold-Doc/: Gold-Doc.md  README.md  exp_template.txt  token
csc2025/GrounTruth/: COMPLETE_DEFUSE_GUIDE.md  FINAL_GUIDE.md  README.md  analyze_pins.py  bomb.Ass.ino.elf  bomb.R0s.ino.elf  bomb.Rss.ino.elf  defuse_corrected.py
csc2025/PlayShaMiGame/: ANALYSIS.md  FINAL_STATUS.md  README.md  RESEARCH.md  exploit.py  exploit_exception_carry.py  exploit_special.py  game_server  prepare_gdb.py  solve.py  solve_simple.py  solve_socket.py  test_negative_magic.txt  (+1 more)
docs/: ARCH_PACKAGES.md  GIT_COMMITS.md  INSTALL_INSTRUCTIONS.md  README.md  SESSION_SUMMARY.md  SYSTEM_CHECK.md
scripts/: setup-arch-paru.sh  setup_gem_path.sh
static_bins/: .gitkeep
(+121 files in other folders)
