[project]
name = "ctf-arsenal"
version = "1.0.0"
description = "CTF Competition Toolkit"
requires-python = ">=3.10"
dependencies = [
    "pwntools>=4.12.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pycryptodome>=3.19.0",
]

[project.optional-dependencies]
scapy = ["scapy>=2.5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
